// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryTypeSection (condensed) renders correctly when not ups 1`] = `
Array [
  <div
    className="shipped-section small-12 large-5"
  >
    <h3>
      Shipped to Your Door from Vendor
    </h3>
    <h4
      className="small-12"
    >
      <p
        className="bold"
      >
        FREE
      </p>
      <p>
        Should arrive in 7-10 business days
      </p>
    </h4>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair/26043632"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair/26043632"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair"
          >
            <p>
              Collins Point Brown Accent Chair
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair2"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair2/26043633"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair2/26043633"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair2"
          >
            <p>
              Collins Point Brown Accent Chair2
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair3"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair3/26043634"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair3/26043634"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair3"
          >
            <p>
              Collins Point Brown Accent Chair3
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Gift Card"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/gift-card/83333333"
            gtm-value={null}
            href="/furniture/product/gift-card/83333333"
            onClick={[Function]}
            title="Gift Card"
          >
            <p>
              Gift Card
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           1
        </div>
      </div>
    </div>
  </div>,
  <br />,
]
`;

exports[`DeliveryTypeSection (condensed) renders correctly when ups 1`] = `
Array [
  <div
    className="shipped-section small-12 large-5"
  >
    <h3>
      Shipped to Your Door via UPS
    </h3>
    <h4
      className="small-12"
    >
      <p
        className="bold"
      >
        FREE
      </p>
      <p>
        Should arrive in 7-10 business days
      </p>
    </h4>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair/26043632"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair/26043632"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair"
          >
            <p>
              Collins Point Brown Accent Chair
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair2"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair2/26043633"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair2/26043633"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair2"
          >
            <p>
              Collins Point Brown Accent Chair2
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product separator"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Collins Point Brown Accent Chair3"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/collins-point-brown-accent-chair3/26043634"
            gtm-value={null}
            href="/furniture/product/collins-point-brown-accent-chair3/26043634"
            onClick={[Function]}
            title="Collins Point Brown Accent Chair3"
          >
            <p>
              Collins Point Brown Accent Chair3
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           2
        </div>
      </div>
    </div>
    <div
      className="delivery-product"
    >
      <div
        className="product-container grid-x"
      >
        <div
          className="product-info small-9"
        >
          <a
            aria-label="Gift Card"
            gtm-action={null}
            gtm-category={null}
            gtm-label="/furniture/product/gift-card/83333333"
            gtm-value={null}
            href="/furniture/product/gift-card/83333333"
            onClick={[Function]}
            title="Gift Card"
          >
            <p>
              Gift Card
            </p>
          </a>
        </div>
        <div
          className="quantity small-2"
        >
          QTY: 
           1
        </div>
      </div>
    </div>
  </div>,
  <br />,
]
`;
